# packages/api/src/openapi/api.yml
@@ -96,6 +96,11 @@ paths:
                     default: Created
                   data:
                     $ref: '#/components/schemas/User'
+                required:
+                  - statusCode
+                  - message
+                  - data
+                additionalProperties: false
         400:
           description: Bad Request
           content:
@@ -180,6 +185,11 @@ paths:
                     type: string
                     description: Token returned upon successful login.
                     example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+                required:
+                  - statusCode
+                  - message
+                  - data
+                additionalProperties: false
         400:
           description: Bad Request
           content:
@@ -216,65 +226,54 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
-  /users/{userId}/articles:
-    post:
+  /users:
+    get:
       tags:
-        - 📚 Articles
-      summary: Create a new article for a specific user.
-      description: This endpoint allows to create a new article associated with a specific user identified by `{userId}`.
-      x-eov-operation-handler: articleController
-      operationId: create
+        - 🧑‍💻 Users
+      summary: Retrieve a list of users.
+      description: This endpoint allows you to retrieve a paginated list of users.
+      x-eov-operation-handler: userController
+      operationId: findAndCountAll
       parameters:
-        - in: path
-          name: userId
-          required: true
+        - name: page
+          in: query
+          description: The page number for pagination.
+          required: false
+          schema:
+            type: integer
+            format: int64
+            default: 0
+        - name: limit
+          in: query
+          description: The limit of results per page.
+          required: false
+          schema:
+            type: integer
+            format: int64
+            default: 20
+        - name: find
+          in: query
+          description: A search term to filter results.
+          required: false
           schema:
             type: string
-            description: The ID of the user who will own the article.
-            example: 123e4567-e89b-12d3-a456-426614174001
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                title:
-                  type: string
-                  description: The title of the article.
-                  example: Getting Started with OpenAPI
-                content:
-                  type: string
-                  description: The main content of the article.
-                  example: This article provides an introduction to OpenAPI and its usage.
-                slug:
-                  type: string
-                  description: The SEO-friendly slug for the article.
-                  example: getting-started-with-openapi
-                status:
-                  type: string
-                  description: The status of the article.
-                  enum:
-                    - draft
-                    - published
-                  example: published
-                  default: draft
-                tags:
-                  type: array
-                  items:
-                    type: string
-                    description: A tag associated with the article.
-                  example: [tutorial, api]
-                  default: []
-              required:
-                - title
-                - content
-                - slug
-                - status
-              additionalProperties: false
+        - name: order
+          in: query
+          description: >
+            Order of the results: 
+              
+              - `a-z` - Order by name ascending. From A to Z
+              - `z-a` - Order by name descending. From Z to A
+          required: false
+          schema:
+            type: string
+            enum:
+              - a-z
+              - z-a
+            default: a-z
       responses:
-        201:
-          description: Created
+        200:
+          description: OK
           content:
             application/json:
               schema:
@@ -284,13 +283,26 @@ paths:
                     type: integer
                     format: int64
                     description: HTTP status code indicating a successful operation.
-                    default: 201
+                    default: 200
                   message:
                     type: string
                     description: Descriptive message of the operation.
                     default: Created
+                  count:
+                    type: integer
+                    format: int64
+                    description: The total number of users found.
+                    default: 1
                   data:
-                    $ref: '#/components/schemas/Article'
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/User'
+                required:
+                  - statusCode
+                  - message
+                  - count
+                  - data
+                additionalProperties: false
         400:
           description: Bad Request
           content:
@@ -327,6 +339,117 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
+  # /users/{userId}/articles:
+  #   post:
+  #     tags:
+  #       - 📚 Articles
+  #     summary: Create a new article for a specific user.
+  #     description: This endpoint allows to create a new article associated with a specific user identified by `{userId}`.
+  #     x-eov-operation-handler: articleController
+  #     operationId: create
+  #     parameters:
+  #       - in: path
+  #         name: userId
+  #         required: true
+  #         schema:
+  #           type: string
+  #           description: The ID of the user who will own the article.
+  #           example: 123e4567-e89b-12d3-a456-426614174001
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               title:
+  #                 type: string
+  #                 description: The title of the article.
+  #                 example: Getting Started with OpenAPI
+  #               content:
+  #                 type: string
+  #                 description: The main content of the article.
+  #                 example: This article provides an introduction to OpenAPI and its usage.
+  #               slug:
+  #                 type: string
+  #                 description: The SEO-friendly slug for the article.
+  #                 example: getting-started-with-openapi
+  #               status:
+  #                 type: string
+  #                 description: The status of the article.
+  #                 enum:
+  #                   - draft
+  #                   - published
+  #                 example: published
+  #                 default: draft
+  #               tags:
+  #                 type: array
+  #                 items:
+  #                   type: string
+  #                   description: A tag associated with the article.
+  #                 example: [tutorial, api]
+  #                 default: []
+  #             required:
+  #               - title
+  #               - content
+  #               - slug
+  #               - status
+  #             additionalProperties: false
+  #     responses:
+  #       201:
+  #         description: Created
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               properties:
+  #                 statusCode:
+  #                   type: integer
+  #                   format: int64
+  #                   description: HTTP status code indicating a successful operation.
+  #                   default: 201
+  #                 message:
+  #                   type: string
+  #                   description: Descriptive message of the operation.
+  #                   default: Created
+  #                 data:
+  #                   $ref: '#/components/schemas/Article'
+  #       400:
+  #         description: Bad Request
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/BadRequest'
+  #       401:
+  #         description: Unauthorized
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Unauthorized'
+  #       403:
+  #         description: Forbidden
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Forbidden'
+  #       404:
+  #         description: Not Found
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/NotFound'
+  #       409:
+  #         description: Conflict
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Conflict'
+  #       500:
+  #         description: Internal Server Error
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/InternalServerError'
 components:
   schemas:
     BadRequest:
